# nixops-digitalocean

./: README.md  default.nix  overrides.nix  pyproject.toml
nixops_digitalocean/backends/: droplet.py
nixops_digitalocean/data/: nixos-infect
nixops_digitalocean/nix/: default.nix  droplet.nix
