[tool.poetry]
name = "nixops_digitalocean"
version = "0.2.0"
description = "NixOps Digital Ocean plugin"
authors = [
    "Robert Djubek <envy1988@gmail.com>",
    "Matan Shenhav <m.shenhav@gmail.com>"
]
license = "LGPL-3.0-only"
include = [ "nixops_digitalocean/nix/*.nix" ]


[tool.poetry.dependencies]
python = "^3.7"
python-digitalocean = "^1.15.0"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
typing-extensions = "^3.7.4"
nixos-modules-contrib = {git = "https://github.com/nix-community/nixos-modules-contrib.git", rev = "master"}

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"

[tool.poetry.plugins."nixops"]
digitalocean = "nixops_digitalocean.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
